Agregadas entidades, contexto y repositorio

--- a/Inventario.Desktop/Inventario.Desktop.csproj
+++ b/Inventario.Desktop/Inventario.Desktop.csproj
@@ -9,7 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Catalog\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.24">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Inventario.Application\Inventario.Application.csproj" />
+    <ProjectReference Include="..\Inventario.Core\Inventario.Core.csproj" />
   </ItemGroup>
 
 </Project>
